// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autosuggest @click and @selected listener events works as expected 1`] = `
<div id="autosuggest"><input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="false" aria-expanded="false" id="autosuggest__input" placeholder="Type 'G'" value="clifford kits">
  <div class="autosuggest__results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can click outside document to trigger close 1`] = `
<div id="autosuggest"><input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="false" aria-expanded="false" id="autosuggest__input" placeholder="Type 'G'" value="G">
  <div class="autosuggest__results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can customize ids and classes for container divs 1`] = `
<div id="automatischsuchen" class="containerz"><input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="false" aria-expanded="false" id="autosuggest__input" placeholder="Type 'G'">
  <div class="resultz-containerz">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can display section header 1`] = `
<div id="autosuggest"><input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="true" aria-expanded="true" id="autosuggest__input" placeholder="Type 'G'" value="G" class="autosuggest__input--open">
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest" class="autosuggest__results">
      <ul role="listbox" aria-labelledby="autosuggest">
        <li class="autosuggest__results-before autosuggest__results-before--default">Suggestions</li>
        <li role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest__results-item--0" class="autosuggest__results-item">
          clifford kits
        </li>
        <li role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest__results-item--1" class="autosuggest__results-item">
          friendly chemistry
        </li>
        <li role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest__results-item--2" class="autosuggest__results-item">
          phonics
        </li>
        <li role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest__results-item--3" class="autosuggest__results-item">
          life of fred
        </li>
        <li role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest__results-item--4" class="autosuggest__results-item">
          life of fred math
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can modify input type attribute 1`] = `
<div id="autosuggest"><input type="search" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="false" aria-expanded="false" id="autosuggest__input" placeholder="Type 'G'">
  <div class="autosuggest__results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can mount 1`] = `
<div id="autosuggest"><input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="false" aria-expanded="false" id="autosuggest__input" placeholder="Type 'G'" value="q">
  <div class="autosuggest__results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can render default suggestion value by property name 1`] = `
<div id="autosuggest"><input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="false" aria-expanded="false" id="autosuggest__input" placeholder="Type 'G'" value="Frodo" class="cool-class">
  <div class="autosuggest__results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can render section slots 1`] = `
<div id="autosuggest"><input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="true" aria-expanded="true" id="autosuggest__input" placeholder="Type 'G'" value="G" class="autosuggest__input--open">
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest" class="autosuggest__results">
      <ul role="listbox" aria-labelledby="autosuggest">
        <li class="autosuggest__results-before autosuggest__results-before--default">Suggestions</li>
        <li role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest__results-item--0" class="autosuggest__results-item">
          clifford kits
        </li>
        <li role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest__results-item--1" class="autosuggest__results-item">
          friendly chemistry
        </li>
        <li role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest__results-item--2" class="autosuggest__results-item">
          phonics
        </li>
        <li role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest__results-item--3" class="autosuggest__results-item">
          life of fred
        </li>
        <li role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest__results-item--4" class="autosuggest__results-item">
          life of fred math
        </li>
      </ul>
      <ul role="listbox" aria-labelledby="autosuggest">
        <li class="autosuggest__results-before autosuggest__results-before--dogs">The Dogs</li>
        <li role="option" data-suggestion-index="5" data-section-name="dogs" id="autosuggest__results-item--5" class="autosuggest__results-item">
          spike
        </li>
        <li role="option" data-suggestion-index="6" data-section-name="dogs" id="autosuggest__results-item--6" class="autosuggest__results-item">
          bud
        </li>
        <li role="option" data-suggestion-index="7" data-section-name="dogs" id="autosuggest__results-item--7" class="autosuggest__results-item">
          rover
        </li>
      </ul>
      <ul role="listbox" aria-labelledby="autosuggest">
        <li>Moar Cats is good</li>
        <li role="option" data-suggestion-index="8" data-section-name="cats" id="autosuggest__results-item--8" class="autosuggest__results-item">
          sassy
        </li>
        <li role="option" data-suggestion-index="9" data-section-name="cats" id="autosuggest__results-item--9" class="autosuggest__results-item">
          tuesday
        </li>
        <li role="option" data-suggestion-index="10" data-section-name="cats" id="autosuggest__results-item--10" class="autosuggest__results-item">
          church
        </li>
      </ul>
      <ul role="listbox" aria-labelledby="autosuggest">
        <li>zoo animals?</li>
        <li role="option" data-suggestion-index="11" data-section-name="zeu" id="autosuggest__results-item--11" class="autosuggest__results-item">
          elephant
        </li>
        <li role="option" data-suggestion-index="12" data-section-name="zeu" id="autosuggest__results-item--12" class="autosuggest__results-item">
          lion
        </li>
      </ul>
      <ul role="listbox" aria-labelledby="autosuggest">
        <li class="autosuggest__results-before autosuggest__results-before--Uhh">uhh</li>
        <li role="option" data-suggestion-index="13" data-section-name="Uhh" id="autosuggest__results-item--13" class="autosuggest__results-item">
          something
        </li>
        <li role="option" data-suggestion-index="14" data-section-name="Uhh" id="autosuggest__results-item--14" class="autosuggest__results-item">
          something2
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can render simplest component with single onSelected 1`] = `
<div id="autosuggest"><input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="true" aria-expanded="true" id="autosuggest__input" placeholder="Type 'G'" value="phonics" class="autosuggest__input--open cool-class">
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest" class="autosuggest__results">
      <ul role="listbox" aria-labelledby="autosuggest">
        <li role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest__results-item--0" class="autosuggest__results-item">
          clifford kits
        </li>
        <li role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest__results-item--1" class="autosuggest__results-item">
          friendly chemistry
        </li>
        <li role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest__results-item--2" class="autosuggest__results-item">
          phonics
        </li>
        <li role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest__results-item--3" class="autosuggest__results-item">
          life of fred
        </li>
        <li role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest__results-item--4" class="autosuggest__results-item">
          life of fred math
        </li>
        <li role="option" data-suggestion-index="5" data-section-name="default" id="autosuggest__results-item--5" class="autosuggest__results-item">
          magic school bus
        </li>
        <li role="option" data-suggestion-index="6" data-section-name="default" id="autosuggest__results-item--6" class="autosuggest__results-item">
          math mammoth light blue
        </li>
        <li role="option" data-suggestion-index="7" data-section-name="default" id="autosuggest__results-item--7" class="autosuggest__results-item">
          handwriting
        </li>
        <li role="option" data-suggestion-index="8" data-section-name="default" id="autosuggest__results-item--8" class="autosuggest__results-item">
          math
        </li>
        <li role="option" data-suggestion-index="9" data-section-name="default" id="autosuggest__results-item--9" class="autosuggest__results-item">
          minecraft
        </li>
        <li role="option" data-suggestion-index="10" data-section-name="default" id="autosuggest__results-item--10" class="autosuggest__results-item">
          free worksheets
        </li>
        <li role="option" data-suggestion-index="11" data-section-name="default" id="autosuggest__results-item--11" class="autosuggest__results-item">
          4th grade
        </li>
        <li role="option" data-suggestion-index="12" data-section-name="default" id="autosuggest__results-item--12" class="autosuggest__results-item">
          snap circuits
        </li>
        <li role="option" data-suggestion-index="13" data-section-name="default" id="autosuggest__results-item--13" class="autosuggest__results-item">
          bath toys
        </li>
        <li role="option" data-suggestion-index="14" data-section-name="default" id="autosuggest__results-item--14" class="autosuggest__results-item">
          channies
        </li>
        <li role="option" data-suggestion-index="15" data-section-name="default" id="autosuggest__results-item--15" class="autosuggest__results-item">
          fred
        </li>
        <li role="option" data-suggestion-index="16" data-section-name="default" id="autosuggest__results-item--16" class="autosuggest__results-item">
          lego
        </li>
        <li role="option" data-suggestion-index="17" data-section-name="default" id="autosuggest__results-item--17" class="autosuggest__results-item">
          math life of fred
        </li>
        <li role="option" data-suggestion-index="18" data-section-name="default" id="autosuggest__results-item--18" class="autosuggest__results-item">
          multiplication
        </li>
        <li role="option" data-suggestion-index="19" data-section-name="default" id="autosuggest__results-item--19" class="autosuggest__results-item">
          thinking tree
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can render slots 1`] = `
<div id="autosuggest"><input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="true" aria-expanded="true" id="autosuggest__input" placeholder="Type 'G'" value="G" class="autosuggest__input--open">
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest" class="autosuggest__results">
      <div class="header-dude"></div>
      <ul role="listbox" aria-labelledby="autosuggest">
        <li role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest__results-item--0" class="autosuggest__results-item">
          <h1>clifford kits</h1>
        </li>
        <li role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest__results-item--1" class="autosuggest__results-item">
          <h1>friendly chemistry</h1>
        </li>
        <li role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest__results-item--2" class="autosuggest__results-item">
          <h1>phonics</h1>
        </li>
        <li role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest__results-item--3" class="autosuggest__results-item">
          <h1>life of fred</h1>
        </li>
        <li role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest__results-item--4" class="autosuggest__results-item">
          <h1>life of fred math</h1>
        </li>
      </ul>
      <div id="footer-dude"><span>1</span><span>2</span></div>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can render suggestions 1`] = `
<div id="autosuggest"><input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="autosuggest__results-item--0" aria-haspopup="true" aria-expanded="true" id="autosuggest__input" placeholder="Type 'G'" value="clifford kits" class="autosuggest__input--open">
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest" class="autosuggest__results">
      <ul role="listbox" aria-labelledby="autosuggest">
        <li role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest__results-item--0" class="autosuggest__results-item">
          clifford kits
        </li>
        <li role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest__results-item--1" class="autosuggest__results-item">
          friendly chemistry
        </li>
        <li role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest__results-item--2" class="autosuggest__results-item">
          phonics
        </li>
        <li role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest__results-item--3" class="autosuggest__results-item">
          life of fred
        </li>
        <li role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest__results-item--4" class="autosuggest__results-item">
          life of fred math
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can select from suggestions using keystroke 1`] = `
<div id="autosuggest"><input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="false" aria-expanded="false" id="autosuggest__input" placeholder="Type 'G'" value="G">
  <div class="autosuggest__results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can use escape key to exit 1`] = `
<div id="autosuggest"><input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="false" aria-expanded="false" id="autosuggest__input" placeholder="Type 'G'" value="G">
  <div class="autosuggest__results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest is aria complete 1`] = `
<div id="autosuggest"><input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="autosuggest__results-item--2" aria-haspopup="true" aria-expanded="true" id="autosuggest__input" placeholder="Type 'G'" value="phonics" class="autosuggest__input--open">
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest" class="autosuggest__results">
      <ul role="listbox" aria-labelledby="autosuggest">
        <li role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest__results-item--0" class="autosuggest__results-item">
          clifford kits
        </li>
        <li role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest__results-item--1" class="autosuggest__results-item">
          friendly chemistry
        </li>
        <li role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest__results-item--2" class="autosuggest__results-item">
          phonics
        </li>
        <li role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest__results-item--3" class="autosuggest__results-item">
          life of fred
        </li>
        <li role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest__results-item--4" class="autosuggest__results-item">
          life of fred math
        </li>
      </ul>
    </div>
  </div>
</div>
`;
